fix(@clayui/css): Cadmin slideout should use overflow visible for resize bar to show

--- a/packages/clay-css/src/scss/cadmin/variables/_slideout.scss
+++ b/packages/clay-css/src/scss/cadmin/variables/_slideout.scss
@@ -56,6 +56,7 @@ $cadmin-c-slideout: map-deep-merge(
 		sidebar: (
 			display: none,
 			flex-shrink: 0,
+			overflow: visible,
 			position: relative,
 			width: $cadmin-c-slideout-sidebar-width,
 		),
